fix covers class

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -22,13 +22,11 @@
 .covers-container {
   max-width: 100%;
   max-height: 100%;
-  /* width: 100%;
-  height: 100%; */
   margin: 0 auto;
   position: relative;
 }
 
-.content {
+.content-marquee {
   position: relative;
 }
 .marquee {
@@ -90,13 +88,8 @@
     padding-top: 96px;
   }
 
-  /* .covers-container {
-    max-width: 768px;
-    max-height: 960px;
-  } */
   
   .marquee {
-    /* width: 768px; */
     height: 960px;
     background: border-box url(../img/projects/Rectangle_13_1.png) center/cover no-repeat;
   }
@@ -128,10 +121,6 @@
   .covers {
     padding-top: 164px;
   }
-
-  /* .covers-container {
-    max-width: 1440px;
-  } */
 
   .marquee {
     /* width: 1440px; */
